--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -8,10 +8,10 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
     @if (hasExternalLogins)
     {
-        <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
+        <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External Logins</a></li>
     }
     @* <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li> *@
-    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal Data</a></li>
 
     @if (User.IsInRole("Student"))
     {
@@ -20,7 +20,7 @@
     }
     else if(User.IsInRole("Lecturers"))
     {
-        <a id="manage" class="nav-link" asp-area="Lecturers" asp-controller="Courses" asp-action="Index" title="Manage">Course management</a>
+        <a id="manage" class="nav-link" asp-area="Lecturers" asp-controller="Courses" asp-action="Index" title="Manage">Course Management</a>
     }
     
 </ul>
