--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/shared/_LayoutLecturer.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/shared/_LayoutLecturer.cshtml
@@ -30,7 +30,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="https://localhost:7010/Lecturers">
                 <div class="sidebar-brand-icon">
                     <i class="fas fa-user-tie"></i>
                 </div>
@@ -42,13 +42,13 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span>
+                <a class="nav-link" href="https://localhost:7010/Home/Courses">
+                    <i class="fas fa-chalkboard"></i>
+                    <span>Course Home</span>
                 </a>
             </li>
 
-            <!-- Divider -->
+           @*  <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
@@ -118,21 +118,21 @@
                         <a class="collapse-item" href="blank.html">Blank Page</a>
                     </div>
                 </div>
-            </li>
+            </li> *@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span>
+                <a class="nav-link" href="https://localhost:7010/Identity/Account/Manage">
+                    <i class="far fa-id-card"></i>
+                    <span>Information</span>
                 </a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span>
+                    <span>Empty</span>
                 </a>
             </li>
 
@@ -336,7 +336,7 @@
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="https://localhost:7010/Identity/Account/Manage" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Administrator</span>
                                 <i class="fas fa-user-tie"></i>
@@ -344,7 +344,7 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="https://localhost:7010/Identity/Account/Manage">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
@@ -378,7 +378,7 @@
                 <footer class="sticky-footer bg-white">
                     <div class="container my-auto">
                         <div class="copyright text-center my-auto">
-                            <span>Copyright &copy; Your Website 2021</span>
+                            <span>No Name &copy; Study English Website 2024</span>
                         </div>
                     </div>
                 </footer>
@@ -408,7 +408,7 @@
                     <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                        <a class="btn btn-primary" href="login.html">Logout</a>
+                        <a class="btn btn-primary" href="https://localhost:7010/">Logout</a>
                     </div>
                 </div>
             </div>
