--- a/Web_day_tieng_Anh/wwwroot/admin/css/styles.css
+++ b/Web_day_tieng_Anh/wwwroot/admin/css/styles.css
@@ -4275,8 +4275,8 @@ input[type="button"].btn-block {
 
     .nav-pills .nav-link.active,
     .nav-pills .show > .nav-link {
-        color: #fff;
-        background-color: #4e73df;
+        color: #000;
+        background-color: #5fcf80;
     }
 
 .nav-fill > .nav-link,
