--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,21 +1,38 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Đăng Xuất";
 }
 
-<header>
-    <h1>@ViewData["Title"]</h1>
-    @{
-        if (User.Identity?.IsAuthenticated ?? false)
-        {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
-            </form>
-        }
-        else
-        {
-            <p>You have successfully logged out of the application.</p>
-        }
+<style>
+    .btn-custom {
+        color: #000;
+        transition: color 0.1s; 
     }
+
+        .btn-custom:hover {
+            color: #fff;
+        }
+</style>
+
+<header class="d-flex justify-content-center align-items-center flex-column">
+    <h1>@ViewData["Title"]</h1>
+    <div class="text-center mb-3">
+        @{
+            if (User.Identity?.IsAuthenticated ?? false)
+            {
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                    <button type="submit" class="nav-link btn btn-outline-dark rounded-pill px-4 py-2 btn-custom">Bấm vào đây để đăng xuất</button>
+                </form>
+            }
+            else
+            {
+                <p>You have successfully logged out of the application.</p>
+            }
+        }
+    </div>
 </header>
+
+
+
+
