--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -6,9 +6,9 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h3 style="text-align:center; color:#000">@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row" style="display: flex; justify-content: center;">
     <div class="col-md-6">
         <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
