--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Add.cshtml
@@ -71,7 +71,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="color: black;">Back to List</a>
 </div>
 
 @section Scripts {
