--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Manage Home</h1>
 
 <p>
-    <a asp-action="Add">Create New</a>
+    <a asp-action="Add" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
