--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
@@ -50,14 +50,11 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-controller="Courses" asp-action="Display" asp-route-id="@ViewData["CourseId"]" class="btn btn-warning mx-2" style="color: black;">Back</a>
+
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    @* <a asp-action="Index">Back to List</a> *@
-    <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@ViewData["CourseId"]">Back to list</a>
 </div>
 
 @section Scripts {
