--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Index.cshtml
@@ -41,6 +41,7 @@
 }
     </tbody>
 </table>
+<a asp-controller="Courses" asp-action="Display" asp-route-id="@Model.FirstOrDefault()?.CourseId" class="btn btn-warning mx-2" style="color: black;">Back</a>
 @section Scripts {
     <script>
         // Get all elements with class "serial-number"
