--- a/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
@@ -135,14 +135,14 @@
                             <span class="">Mentor</span>
                         </a>
                         <div class="footer-contact pt-3">
-                            <p>A108 Adam Street</p>
-                            <p>New York, NY 535022</p>
-                            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                            <p><strong>Email:</strong> <span>info@example.com</span></p>
+                            <p>Quack quack quack</p>
+                            <p>Viet Nam, VN 300475</p>
+                            <p class="mt-3"><strong>Phone:</strong> <span>+2 6666 6666 66</span></p>
+                            <p><strong>Email:</strong> <span>Duck@outlook.com</span></p>
                         </div>
                         <div class="social-links d-flex mt-4">
                             <a href=""><i class="bi bi-twitter"></i></a>
-                            <a href=""><i class="bi bi-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100030194055786&locale=vi_VN"><i class="bi bi-facebook"></i></a>
                             <a href=""><i class="bi bi-instagram"></i></a>
                             <a href=""><i class="bi bi-linkedin"></i></a>
                         </div>
@@ -171,8 +171,8 @@
                     </div>
 
                     <div class="col-lg-4 col-md-12 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+                        <h4>Bản tin của chúng tôi</h4>
+                        <p>Mọi thắc mắc xin nhắn tin riêng cho chúng tôi, phản hồi sẽ sớm nhất có thể!</p>
                         <form action="forms/newsletter.php" method="post" class="php-email-form">
                              @* coi lai doan nay  *@ 
                             <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
@@ -186,13 +186,13 @@
             </div>
 
             <div class="container copyright text-center mt-4">
-                <p>© <span>Copyright</span> <strong class="px-1">SiteName</strong> <span>All Rights Reserved</span></p>
+                <p>© <span>Copyright</span> <strong class="px-1">Study English Website</strong> <span>Học Tiếng Anh Miễn Phí</span></p>
                 <div class="credits">
                     <!-- All the links in the footer should remain intact. -->
                     <!-- You can delete the links only if you've purchased the pro version. -->
                     <!-- Licensing information: https://bootstrapmade.com/license/ -->
                     <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                    Designed by <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">No Name</a>
                 </div>
             </div>
 
