--- a/Web_day_tieng_Anh/Views/CartBuyCourse/Index.cshtml
+++ b/Web_day_tieng_Anh/Views/CartBuyCourse/Index.cshtml
@@ -1,23 +1,177 @@
 ﻿@model CartBuyCourse
-<h2>Your Cart</h2>
-<table>
-	<tr>
-		<th>Course</th>
+@{
+    decimal totalAmount = 0;
+    int totalQuantity = 0;
+}
 
-		<th>Price</th>
+<style>
+    .table-bordered th, .table-bordered td {
+        border: 5px solid #dee2e6 !important;
+    }
 
-	</tr>
-	@foreach (var item in Model.Items)
-	{
-		<tr>
+    .table {
+        width: 100%;
+        margin-bottom: 1rem;
+        color: #212529;
+    }
 
-			<td>@item.NameCourse</td>
+    th {
+        vertical-align: bottom;
+        border-bottom: 2px solid #dee2e6;
+    }
 
-			<td>@item.Price</td>
+    td, th {
+        padding: .75rem;
+        vertical-align: top;
+        border-top: 1px solid #dee2e6;
+    }
 
-			<td>
-				<a asp-action="RemoveFromCart" asp-route-coursetId="@item.CourseId">Remove</a>
-			</td>
-		</tr>
-	}
-</table>
+    .btn-danger {
+        color: #fff;
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+    .btn-primary {
+        color: #fff;
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+
+    .empty-cart {
+        font-size: 20px;
+        color: black;
+        text-align: center;
+        position: relative;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .empty-cart-icon {
+        font-size: 3rem;
+        margin-bottom: 10px;
+    }
+
+    .empty-cart-text {
+        display: block;
+    }
+</style>
+
+<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+
+
+
+<section class="h-100 h-custom" style="background-color: darkgray;">
+    @if (Model.Items.Any())
+    {
+        <div class="container bg-dark py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12">
+                    <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+                        <div class="card-body p-0">
+                            <div class="row g-0">
+                                <div class="col-lg-8">
+                                    <div class="p-5">
+                                        <div class="d-flex justify-content-between align-items-center mb-5">
+                                            <h1 class="fw-bold mb-0 text-black text-lg-center"><img src="~/images/Picture6.png" />Your card</h1>
+                                            <h6 class="mb-0 text-muted">3 items</h6>
+                                        </div>
+                                        @foreach (var item in Model.Items)
+                                        {
+                                            <hr class="my-4">
+
+                                            <div class="row mb-4 d-flex justify-content-between align-items-center">
+                                               
+                                                <div class="col-md-3 col-lg-3 col-xl-3">
+                                                    <h6 class="text-black mb-0">@item.NameCourse</h6>
+                                                    <h6 class="text-muted">----</h6>
+
+                                                </div>
+                                                <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                                                    <form asp-controller="ShoppingCart" asp-action="UpdateQuantity" method="post">
+                                                        <input type="hidden" name="productId" value="@item.CourseId" />
+                                                        
+                                                       
+
+                                                    </form>
+                                                </div>
+                                                <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                                                    <h6 class="mb-0">
+                                                        @String.Format("{0:C}", item.Price)
+                                                    </h6>
+                                                </div>
+                                                <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                                    <a href="@Url.Action("RemoveFromCart",new {courseId = item.CourseId})" class="text-muted"><i class="fas fa-times"></i></a>
+                                                </div>
+
+                                            </div>
+                                            totalAmount += item.Price;
+                                            
+                                        }
+
+
+
+                                        <hr class="my-4">
+
+                                        <div class="pt-5">
+                                            <h6 class="mb-0">
+
+                                                <a asp-controller="Product" asp-action="Index" class="text-body">
+                                                    <i class="fas fa-long-arrow-alt-left me-2"></i>Back to shop
+                                                </a>
+                                            </h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 bg-grey">
+                                    <div class="p-5">
+                                        <h3 class="fw-bold mb-5 mt-2 pt-1">Shipping</h3>
+                                        <hr class="my-4">
+
+                                        <div class="d-flex justify-content-between mb-4">
+                                            <h5 class="text-uppercase">Tổng số lượng : @totalQuantity</h5>
+                                            <h5>@String.Format("{0:C}", totalAmount)</h5>
+                                        </div>
+
+                                        <h5 class="text-uppercase mb-3"></h5>
+
+
+
+                                        <h5 class="text-uppercase mb-3">Promo code</h5>
+
+                                        <div class="mb-5">
+                                            <div data-mdb-input-init class="form-outline">
+                                                <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
+                                                <label class="form-label" for="form3Examplea2">Enter your code</label>
+                                            </div>
+                                        </div>
+
+                                        <hr class="my-4">
+                                        <div class="d-flex justify-content-between mb-5">
+                                            <h5 class="text-uppercase">Total price</h5>
+                                            <h5>@String.Format("{0:C}", totalAmount)</h5>
+                                        </div>
+
+                                        <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-block btn-lg"
+                                                data-mdb-ripple-color="dark">
+                                            <a href="/ShoppingCart/Checkout" class="text-white " style="text-decoration: none;">Thanh toán</a>
+                                        </button>
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+    else
+    {
+        <div class="empty-cart">
+            <i class="bi bi-cart-x-fill empty-cart-icon"></i>
+            <span class="empty-cart-text">Không có sản phẩm nào trong giỏ hàng của bạn.</span>
+        </div>
+    }
+</section>
