Tạo thanh toán bằng paypal

--- a/Web_day_tieng_Anh/Views/CartBuyCourse/Index.cshtml
+++ b/Web_day_tieng_Anh/Views/CartBuyCourse/Index.cshtml
@@ -154,7 +154,7 @@
 
                                         <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-block btn-lg"
                                                 data-mdb-ripple-color="dark">
-                                            <a href="/ShoppingCart/Checkout" class="text-white " style="text-decoration: none;">Thanh toán</a>
+                                            <a href="/CartBuyCourse/PaymentWithPayPal" class="text-white " style="text-decoration: none;">Thanh toán</a>
                                         </button>
 
 
