--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Web_day_tieng_Anh.Models.Test
-
+@using Microsoft.AspNetCore.Mvc.Rendering
 @{
     ViewData["Title"] = "Add";
 }
@@ -27,7 +27,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Add">
+        <form asp-action="Add" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CourseId" value="@ViewData["CourseId"]" />
             <div class="form-group">
