--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/shared/_LayoutLecturer.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/shared/_LayoutLecturer.cshtml
@@ -13,8 +13,7 @@
 
     <!-- Custom fonts for this template-->
     <link href="~/admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="~/admin/css/styles.css" rel="stylesheet">
@@ -44,7 +43,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="https://localhost:7010/Home/Courses">
                     <i class="fas fa-chalkboard"></i>
-                    <span>Course Home</span>
+                    <span>Courses Home</span>
                 </a>
             </li>
 
@@ -374,14 +373,14 @@
                 </div>
                 <!-- /.container-fluid -->
                 <!-- End of Main Content -->
-                <!-- Footer -->
+               @*  <!-- Footer -->
                 <footer class="sticky-footer bg-white">
                     <div class="container my-auto">
                         <div class="copyright text-center my-auto">
                             <span>No Name &copy; Study English Website 2024</span>
                         </div>
                     </div>
-                </footer>
+                </footer> *@
                 <!-- End of Footer -->
 
             </div>
