--- a/Web_day_tieng_Anh/wwwroot/admin/css/styles.css
+++ b/Web_day_tieng_Anh/wwwroot/admin/css/styles.css
@@ -4953,6 +4953,10 @@ input[type="button"].btn-block {
             margin-bottom: -1px;
         }
 
+#accordionSidebar {
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+}
+
 .breadcrumb {
     display: flex;
     flex-wrap: wrap;
