--- a/Web_day_tieng_Anh/Views/Home/Index.cshtml
+++ b/Web_day_tieng_Anh/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                 <h2 data-aos="fade-up" data-aos-delay="100" class="">Learning Today,<br>Leading Tomorrow</h2>
                 <p data-aos="fade-up" data-aos-delay="200">We are the number 1 English teaching team</p>
                 <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-                    <a href="courses.html" class="btn-get-started">Get Started</a>
+                    <a asp-area="" asp-controller="Home" asp-action="Courses">Get Started</a>
                 </div>
             </div>
 
